# flowkit-async

./: .pre-commit-config.yaml  .yamllint.yaml  README.md  dump_py_api.py  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yml  docs.yaml
configs/: coordinator.default.json  worker.default.json
dev/: 404.html  index.html  objects.inv  requirements.txt  sitemap.xml
dev/development/architecture/: index.html
dev/development/contributing/: index.html
dev/development/github-pages/: index.html
dev/development/testing/: index.html
dev/examples/complex-workflows/: index.html
dev/examples/simple-pipeline/: index.html
dev/examples/testing/: index.html
dev/getting-started/concepts/: index.html
dev/getting-started/installation/: index.html
dev/getting-started/quickstart/: index.html
dev/guide/configuration/: index.html
dev/guide/coordinators/: index.html
dev/guide/error-handling/: index.html
dev/guide/graphs/: index.html
dev/guide/workers/: index.html
dev/reference/bus/: index.html
dev/reference/coordinator/: index.html
dev/reference/core/: index.html
dev/reference/protocol/: index.html
dev/reference/testing/: index.html
dev/reference/worker/: index.html
dev/search/: search_index.json
docs/: index.md
docs/_scripts/: gen_tests_doc.py
docs/development/: architecture.md  contributing.md  github-pages.md  testing.md
docs/examples/: complex-workflows.md  simple-pipeline.md  testing.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guide/: configuration.md  coordinators.md  error-handling.md  graphs.md  schema.md  workers.md
docs/reference/: bus.md  coordinator.md  core.md  protocol.md  testing.md  worker.md
src/flowkit/: __init__.py  _version.py
src/flowkit/api/: __init__.py  adapters.py  errors.py  expr.py  externals.py  hooks.py  registry.py  streams.py
src/flowkit/bus/: kafka.py
src/flowkit/codec/: registry.py
src/flowkit/coordinator/: adapters.py  runner.py
src/flowkit/core/: config.py  log.py  logging.py  time.py  types.py  utils.py
src/flowkit/graph/: __init__.py  compact.py  compiler.py  expr.py  expr_funcs.py  spec.py  templates.py
src/flowkit/io/: __init__.py  capabilities.py  content.py  jsonschemas.py  validation.py
src/flowkit/observability/: log_config.py  metrics.py  tracing.py
src/flowkit/outbox/: dispatcher.py
src/flowkit/protocol/: messages.py
src/flowkit/runtime/coordinator/: coordinator.py  hooks_runner.py  metrics.py  outbox.py  planner.py  scheduler.py  vars_store.py
src/flowkit/runtime/stream/: frames.py  merge.py  qos.py
src/flowkit/runtime/worker/: artifacts.py  checkpoints.py  concurrency.py  engine.py  hooks_runner.py  metrics.py  ops_runner.py  outputs_runner.py  state.py  worker.py
src/flowkit/security/: redaction.py
src/flowkit/storage/: __init__.py  artifacts.py  kv.py  offsets.py  outbox.py  tasks.py
src/flowkit/transport/: __init__.py  bus.py  kafka_bus.py
src/flowkit/worker/: __init__.py  artifacts.py  context.py  runner.py  state.py
src/flowkit/worker/handlers/: base.py  echo.py
src/flowkit/worker/input/: pull_adapters.py
tests/: __init__.py  conftest.py  test_artifacts_data.py  test_cancel_and_restart.py  test_chaos_models.py  test_concurrency_limits.py  test_lease_heartbeat_resume.py  test_outbox_delivery.py  test_pipeline_smoke.py  test_reliability_failures.py  test_scheduler_fanin_routing.py  test_streaming_sync.py
tests/e2e/: test_coord_fn_vars_echo_e2e.py
tests/e2e/vars/: test_cancel_preserves_vars.py  test_conditional_routing_xfail.py  test_coord_fn_vars_echo_e2e.py
tests/helpers/: __init__.py  detectors.py  graph.py  handlers.py  inmemory_db.py  kafka.py  setup.py  topics.py  util.py
tests/helpers/handlers/: __init__.py  common.py  special.py
tests/integration/: test_vars_coord_fn_chain.py
tests/integration/adapters/: test_adapter_misc.py  test_empty_upstream.py  test_input_adapter_contract.py  test_rechunk_args.py  test_rechunk_determinism  test_rechunk_determinism.py  test_rechunk_strict_mode.py  test_unknown_adapter.py  test_worker_adapter_precedence.py
tests/integration/streaming/: _helpers.py  test_isolation.py  test_metrics_dedup.py  test_metrics_exactness.py  test_multistream_fanin.py  test_start_when.py
tests/integration/vars/: test_coord_fn_chain.py  test_unset_forms.py  test_worker_adapter_precedence.py  test_worker_adapter_precedence_extra.py
tests/unit/: test_sensitive_detector_di.py  test_vars_incr_strict.py  test_vars_merge_strict.py  test_vars_set_strict.py  test_vars_unset_strict.py
tests/unit/vars/: _shared.py  conftest.py  test_detectors.py  test_incr.py  test_merge.py  test_set.py  test_unset.py
tests/unit/worker/: test_error_classification.py  test_error_policy.py  test_pull_adapters_rechunk.py
v0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.0/development/architecture/: index.html
v0.1.0/development/contributing/: index.html
v0.1.0/development/github-pages/: index.html
v0.1.0/development/testing/: index.html
v0.1.0/examples/complex-workflows/: index.html
v0.1.0/examples/simple-pipeline/: index.html
v0.1.0/examples/testing/: index.html
v0.1.0/getting-started/concepts/: index.html
v0.1.0/getting-started/installation/: index.html
v0.1.0/getting-started/quickstart/: index.html
v0.1.0/guide/configuration/: index.html
v0.1.0/guide/coordinators/: index.html
v0.1.0/guide/error-handling/: index.html
v0.1.0/guide/graphs/: index.html
v0.1.0/guide/workers/: index.html
v0.1.0/reference/bus/: index.html
v0.1.0/reference/coordinator/: index.html
v0.1.0/reference/core/: index.html
v0.1.0/reference/protocol/: index.html
v0.1.0/reference/testing/: index.html
v0.1.0/reference/worker/: index.html
v0.1.0/search/: search_index.json
